wind-turbine: Fix sparkmagic error
Append an additional '%' character to fix the '%%spark' magic command.

Signed-off-by: Dimitrios Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/E2E-Demos/Wind-Turbine-Prediction/wind-turbine.ipynb
+++ b/E2E-Demos/Wind-Turbine-Prediction/wind-turbine.ipynb
@@ -1545,7 +1545,7 @@
     }
    ],
    "source": [
-    "%spark\n",
+    "%%spark\n",
     "from pyspark.ml.regression import GBTRegressionModel\n",
     "gbm_model_dtap = GBTRegressionModel.load(\"file:///mounts/shared-volume/user/spark/GBM.model\")"
    ]
