bike-sharing: Enrich the Notebooks
Include more details in the Notebooks, such as:

* Login widgets
* Details about the example and the code cells
* Model deployment using the python KServe client
* Provide a more dynamic way to capture user-specific
  variables, such as the namespace

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/Data-Science/MLflow/Bike-Sharing-Prediction.ipynb
+++ b/Data-Science/MLflow/Bike-Sharing-Prediction.ipynb
@@ -1,29 +1,94 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Prediction\n",
-    "### Deployment of kserve will take few minutes to comes to ready state, so wait for few minutes before actually executing the below cell."
+    "# Prediction\n",
+    "\n",
+    "Deployment of kserve will take few minutes to comes to ready state. In just a short span of time, it will transition into a ready state, providing the tools you need at your fingertips.\n",
+    "\n",
+    "Now, let us lay the groundwork for what comes next. The first crucial step you will need to undertake is securing an access token. This token serves as your personal key, allowing you to invoke the service."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "import warnings\n",
     "import requests\n",
-    "EZAF_ENV = \"hpe-qa1-ezaf\" \n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Add heading\n",
+    "heading = widgets.HTML(\"<h2>User Credentials</h2>\")\n",
+    "display(heading)\n",
+    "\n",
+    "ezaf_env_input = widgets.Text(description='EZAF Env:')\n",
+    "namespace_input = widgets.Text(description='Namespace:')\n",
+    "deployment_input = widgets.Text(value=\"bike-sharing\", description='Deployment:')\n",
+    "username_input = widgets.Text(description='Username:')\n",
+    "password_input = widgets.Password(description='Password:')\n",
+    "submit_button = widgets.Button(description='Submit')\n",
+    "success_message = widgets.Output()\n",
+    "\n",
+    "ezaf_env = None\n",
+    "namespace = None\n",
+    "username = None\n",
+    "password = None\n",
+    "\n",
+    "def submit_button_clicked(b):\n",
+    "    global ezaf_env, namespace, deployment, username, password\n",
+    "    ezaf_env = ezaf_env_input.value\n",
+    "    namespace = namespace_input.value\n",
+    "    deployment = deployment_input.value\n",
+    "    username = username_input.value\n",
+    "    password = password_input.value\n",
+    "    with success_message:\n",
+    "        success_message.clear_output()\n",
+    "        print(\"Credentials submitted successfully!\")\n",
+    "    submit_button.disabled = True\n",
+    "\n",
+    "submit_button.on_click(submit_button_clicked)\n",
+    "\n",
+    "# Set margin on the submit button\n",
+    "submit_button.layout.margin = '20px 0 20px 0'\n",
+    "\n",
+    "# Display inputs and button\n",
+    "display(ezaf_env_input, namespace_input, deployment_input,\n",
+    "        username_input, password_input, submit_button, success_message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Provide your EZAF subdomain here:\n",
+    "EZAF_ENV = ezaf_env\n",
     "token_url = f\"https://keycloak.{EZAF_ENV}.com/realms/UA/protocol/openid-connect/token\"\n",
     "\n",
     "data = {\n",
-    "    \"username\" : input(\"Enter username.\"),\n",
-    "    \"password\" : input(\"Enter password.\"),\n",
+    "    \"username\" : username,\n",
+    "    \"password\" : password,\n",
     "    \"grant_type\" : \"password\",\n",
     "    \"client_id\" : \"ua-grant\",\n",
     "}\n",
@@ -34,18 +99,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Finally, you are ready to send a POST request to your InferenceService, providing the features in the body of the request. In the response, you'll get the prediction of the model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "NAMESPACE = \"hpedemo-user01\"\n",
-    "DEPLOYMENT_NAME = \"bike-sharing-1\"\n",
+    "NAMESPACE = namespace\n",
+    "DEPLOYMENT_NAME = deployment\n",
     "MODEL_NAME = DEPLOYMENT_NAME\n",
     "SVC = f'{DEPLOYMENT_NAME}-predictor-default.{NAMESPACE}.{EZAF_ENV}.com'\n",
     "URL = f\"https://{SVC}/v2/models/{MODEL_NAME}/infer\"\n",
-    "\n",
-    "print(URL)\n",
     "\n",
     "names = ['season', 'year', 'month', 'hour_of_day', 'is_holiday', 'weekday', 'is_workingday', \n",
     "         'weather_situation', 'temperature', 'feels_like_temperature', 'humidity', 'windspeed']\n",
@@ -74,16 +148,16 @@
     "\n",
     "output = response.json()['outputs'][0]['data']\n",
     "\n",
-    "print(\"Rendted Bikes Per Hours:\\n\")\n",
+    "print(\"\\nRendted Bikes Per Hour:\\n\")\n",
     "for item, out in zip(input_data, output):\n",
     "    input_dict = dict(zip(names,item))\n",
-    "    print(f\"Input Data: {input_dict} \\n\\nBike Per Hour: {out}\\n\")"
+    "    print(f\"Input Data: {input_dict} \\nBike Per Hour: {out}\\n\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
