EZAF-1938: Improvements for Mnist example (user namespace, creation of pipeline and training folder)

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -502,7 +502,7 @@
     "\n",
     "print(f\"Run ID: {run_id}\")\n",
     "\n",
-    "kfp_client.wait_for_run_completion()"
+    "kfp_client.wait_for_run_completion(run_id=run_id, timeout=36000)"
    ]
   },
   {
