EZAF-1938: Improvements for Mnist example (#9)
* EZAF-1938: Improvements for Mnist example (user namespace, creation of pipeline and training folder)

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -1,14 +1,23 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9a6008b8",
+   "metadata": {},
+   "source": [
+    "# MNIST Digits Recognition"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0c1a88c5-b825-4ddc-ac35-dfa6dfd3c067",
    "metadata": {},
    "outputs": [],
    "source": [
-    "HOMEDIR = !echo $HOME\n",
-    "HOMEDIR = HOMEDIR[0]\n",
+    "import uuid\n",
+    "from pathlib import Path\n",
     "\n",
     "######################################### Storage Parameters ##############################################\n",
     "\n",
@@ -16,7 +25,7 @@
     "mnt_path = \"/mnt/data/\"\n",
     "\n",
     "# The initial training data is written to the user volume by the spark job in the Apache Parquet format.\n",
-    "initial_training_data_dir = f\"{HOMEDIR}/user/mnist-spark-data\"\n",
+    "initial_training_data_dir = f\"{str(Path.home())}/user/mnist-spark-data\"\n",
     "\n",
     "# The path is relative, final_training_data_dir should be in the same folder with the notebook\n",
     "final_training_data_dir=\"training\"\n",
@@ -24,10 +33,8 @@
     "######################################## KFP parameters ##################################################\n",
     "\n",
     "# Name of the Katib experiment\n",
-    "name=\"mnist-experiment-v1\"\n",
-    "\n",
-    "# User namespace\n",
-    "namespace=\"hpedemo-user01\"\n",
+    "name = f\"mnist-experiment-{uuid.uuid4().hex[:4]}\"\n",
+    "print(f\"Katib experiment name: {name}\")\n",
     "\n",
     "# Number of epoch to train the model\n",
     "training_steps=\"100\""
@@ -69,12 +76,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "da013670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kfp_client = kfp.Client()\n",
+    "namespace = kfp_client.get_user_namespace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "72049f0f-a0d2-4b37-94e2-57c433bcf0a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Transformation of the training data from Apache Parquet format to the format that is required for the MNIST example\n",
     "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "if not os.path.exists(final_training_data_dir):\n",
+    "    os.makedirs(final_training_data_dir)\n",
+    "    \n",
     "with open(final_training_data_dir + \"/train-images-idx3-ubyte.gz\", 'wb') as f1, \\\n",
     "     open(final_training_data_dir + \"/t10k-images-idx3-ubyte.gz\", 'wb') as f2, \\\n",
     "     open(final_training_data_dir + \"/train-labels-idx1-ubyte.gz\", 'wb') as f3, \\\n",
@@ -94,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You should define the Experiment name, namespace and number of training steps in the arguments.\n",
+    "# You should define number of training steps in the arguments.\n",
     "def create_katib_experiment_task(experiment_name, experiment_namespace, training_steps):\n",
     "    # Trial count specification.\n",
     "    max_trial_count = 5\n",
@@ -157,8 +180,8 @@
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
-    "                                        \"--tf-data-dir=\" + mnt_path + final_training_data_dir + \"/\",\n",
-    "                                        \"--tf-train-steps=\" + str(training_steps),\n",
+    "                                        f\"--tf-data-dir={mnt_path}{final_training_data_dir}/\",\n",
+    "                                        f\"--tf-train-steps={str(training_steps)}\",\n",
     "                                        \"--tf-learning-rate=${trialParameters.learningRate}\",\n",
     "                                        \"--tf-batch-size=${trialParameters.batchSize}\"\n",
     "                                    ],\n",
@@ -198,8 +221,8 @@
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
-    "                                        \"--tf-data-dir=\" + mnt_path + final_training_data_dir + \"/\",\n",
-    "                                        \"--tf-train-steps=\" + str(training_steps),\n",
+    "                                        f\"--tf-data-dir={mnt_path}{final_training_data_dir}/\",\n",
+    "                                        f\"--tf-train-steps={str(training_steps)}\",\n",
     "                                        \"--tf-learning-rate=${trialParameters.learningRate}\",\n",
     "                                        \"--tf-batch-size=${trialParameters.batchSize}\"\n",
     "                                    ],\n",
@@ -289,7 +312,7 @@
     "            best_hps.append(\"--tf-learning-rate=\" + pa[\"value\"])\n",
     "        elif pa[\"name\"] == \"batch_size\":\n",
     "            best_hps.append(\"--tf-batch-size=\" + pa[\"value\"])\n",
-    "    print(\"Best Hyperparameters: {}\".format(best_hps))\n",
+    "    print(f\"Best Hyperparameters: {best_hps}\")\n",
     "    return \" \".join(best_hps)\n",
     "\n",
     "# You should define the TFJob name, namespace, number of training steps, output of Katib and model volume tasks in the arguments.\n",
@@ -321,7 +344,7 @@
     "                            \"-c\"\n",
     "                        ],\n",
     "                        \"args\": [\n",
-    "                            \"python /opt/model.py --tf-data-dir=\" + mnt_path + final_training_data_dir + \"/ --tf-export-dir=/mnt/export --tf-train-steps={} {}\".format(training_steps, best_hps)\n",
+    "                            f\"python /opt/model.py --tf-data-dir={mnt_path}{final_training_data_dir}/ --tf-export-dir=/mnt/export --tf-train-steps={training_steps} {best_hps}\"\n",
     "                        ],\n",
     "                        \"volumeMounts\": [\n",
     "                            {\n",
@@ -372,7 +395,7 @@
     "                            \"-c\",\n",
     "                        ],\n",
     "                        \"args\": [\n",
-    "                          \"python /opt/model.py --tf-data-dir=\" + mnt_path + final_training_data_dir + \"/ --tf-export-dir=/mnt/export --tf-train-steps={} {}\".format(training_steps, best_hps) \n",
+    "                          f\"python /opt/model.py --tf-data-dir={mnt_path}{final_training_data_dir}/ --tf-export-dir=/mnt/export --tf-train-steps={training_steps} {best_hps}\" \n",
     "                        ],\n",
     "                        \"volumeMounts\": [\n",
     "                            {\n",
@@ -423,19 +446,19 @@
     "    # api_version = 'serving.kubeflow.org/v1beta1'\n",
     "    # serving_component_url = 'https://raw.githubusercontent.com/kubeflow/pipelines/master/components/kubeflow/kfserving/component.yaml'\n",
     "\n",
-    "    inference_service = '''\n",
-    "apiVersion: \"{}\"\n",
+    "    inference_service = f'''\n",
+    "apiVersion: \"{api_version}\"\n",
     "kind: \"InferenceService\"\n",
     "metadata:\n",
-    "  name: {}\n",
-    "  namespace: {}\n",
+    "  name: {model_name}\n",
+    "  namespace: {model_namespace}\n",
     "  annotations:\n",
     "    \"sidecar.istio.io/inject\": \"false\"\n",
     "spec:\n",
     "  predictor:\n",
     "    tensorflow:\n",
-    "      storageUri: \"pvc://{}/\"\n",
-    "'''.format(api_version, model_name, model_namespace, str(model_volume_op.outputs[\"name\"]))\n",
+    "      storageUri: \"pvc://{str(model_volume_op.outputs[\"name\"])}/\"\n",
+    "'''\n",
     "\n",
     "    serving_launcher_op = components.load_component_from_url(serving_component_url)\n",
     "    serving_launcher_op(action=\"apply\", inferenceservice_yaml=inference_service).after(tfjob_op)"
@@ -448,18 +471,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "import string\n",
-    "\n",
     "@dsl.pipeline(\n",
     "    name=name,\n",
     "    description=\"An end to end mnist example including hyperparameter tuning, train and inference\"\n",
     ")\n",
     "def mnist_pipeline(name=name, namespace=namespace, training_steps=training_steps):\n",
+    "\n",
     "    # Run the hyperparameter tuning with Katib.\n",
     "    katib_op = create_katib_experiment_task(name, namespace, training_steps)\n",
     "\n",
-    "    volume_str = f\"model-volume-{''.join(random.choice(string.ascii_uppercase + string.digits) for _ in range(8))}\"\n",
+    "    volume_str = f\"model-volume-{uuid.uuid4().hex[:4]}\"\n",
     "    \n",
     "    # Create volume to train and serve the model.\n",
     "    model_volume_op = dsl.VolumeOp(\n",
@@ -477,10 +498,11 @@
     "    print(\"Volume: \", volume_str)\n",
     "    \n",
     "# Run the Kubeflow Pipeline in the user's namespace.\n",
-    "kfp_client = kfp.Client()\n",
     "run_id = kfp_client.create_run_from_pipeline_func(mnist_pipeline, namespace=namespace, arguments={}).run_id\n",
     "\n",
-    "print(\"Run ID: \", run_id)"
+    "print(f\"Run ID: {run_id}\")\n",
+    "\n",
+    "kfp_client.wait_for_run_completion(run_id=run_id, timeout=36000)"
    ]
   },
   {
@@ -497,17 +519,17 @@
     "# Pipeline Run should be succeeded.\n",
     "kfp_run = kfp_client.get_run(run_id=run_id)\n",
     "if kfp_run.run.status == \"Succeeded\":\n",
-    "    print(\"Run {} has been Succeeded\\n\".format(run_id))\n",
+    "    print(f\"Run {run_id} has been Succeeded\\n\")\n",
     "\n",
     "    # Specify the image URL here.\n",
     "    image_url = \"https://raw.githubusercontent.com/kubeflow/katib/master/examples/v1beta1/kubeflow-pipelines/images/9.bmp\"\n",
     "    image = Image.open(requests.get(image_url, stream=True).raw)\n",
-    "    data = np.array(image.convert('L').resize((28, 28))).astype(np.float).reshape(-1, 28, 28, 1)\n",
+    "    data = np.array(image.convert('L').resize((28, 28))).astype(np.float64).reshape(-1, 28, 28, 1)\n",
     "    data_formatted = np.array2string(data, separator=\",\", formatter={\"float\": lambda x: \"%.1f\" % x})\n",
-    "    json_request = '{{ \"instances\" : {} }}'.format(data_formatted)\n",
+    "    json_request = f'{{ \"instances\" : {data_formatted} }}'\n",
     "\n",
     "    # Specify the prediction URL. If you are runing this notebook outside of Kubernetes cluster, you should set the Cluster IP.\n",
-    "    url = \"http://{}-predictor-default.{}.svc.cluster.local/v1/models/{}:predict\".format(name, namespace, name)\n",
+    "    url = f\"http://{name}-predictor-default.{namespace}.svc.cluster.local/v1/models/{name}:predict\"\n",
     "    response = requests.post(url, data=json_request)\n",
     "\n",
     "    print(\"Prediction for the image\")\n",
