EZAF-2209 | Ray-Fraud-Detection-On-Banking | UML

--- a/Data-Science/Ray/Anomaly-Detection-Banking/ray_acceleration_experiment_fraud_detecting_on_banking_system.ipynb
+++ b/Data-Science/Ray/Anomaly-Detection-Banking/ray_acceleration_experiment_fraud_detecting_on_banking_system.ipynb
@@ -74,6 +74,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Experiment UML Sequence diagram:**\n",
+    "Here in thie kernel experiment, I have reprasented the end to end A sequence diagram is a type of interaction diagram because it is necessary to describes how and in what order a group underneath servcies and objects works together to bring the best fit robot and realtime fraud detection classification machine learning workflow.\n",
+    "\n",
+    "## **Steps are following:**\n",
+    "1. Initialize Jupiter notebook service.\n",
+    "2. Import all required packages, user define functions, initialize global objects\n",
+    "3. Procure dataset from object storage, once the dataset loaded successfully\n",
+    "4. Data we need to pre-process, validating, once all the above actions are done here, we are defining the required variables.\n",
+    "4. Once the global variables we are available, we are initiating the model training, at the and based on the best satisfactory score. \n",
+    "5. Based on the satisfactory score we are deploying the model with KServe on top kubernetes cluster.\n",
+    "\n",
+    "<style>\n",
+    ".center {\n",
+    "  display: block;\n",
+    "  margin-left: auto;\n",
+    "  margin-right: auto;\n",
+    "  width: 80%;\n",
+    "}\n",
+    "</style>\n",
+    "<p><big><center> End to End Ray Experiment UML Sequence Diagram :: </center><big><img src=\"./images/ray-fraud-detection-on-banking-alfa-1.png\" alt=\"ray-fraud-detection-on-banking\" class=\"center\"> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
