EZAF-2209 | UML, Readme, Documents updated

--- a/Data-Science/Ray/Anomaly-Detection-Banking/ray_acceleration_experiment_fraud_detecting_on_banking_system.ipynb
+++ b/Data-Science/Ray/Anomaly-Detection-Banking/ray_acceleration_experiment_fraud_detecting_on_banking_system.ipynb
@@ -96,7 +96,8 @@
     "  width: 80%;\n",
     "}\n",
     "</style>\n",
-    "<p><big><center> End to End Ray Experiment UML Sequence Diagram :: </center><big><img src=\"./images/ray-fraud-detection-on-banking-alfa-1.png\" alt=\"ray-fraud-detection-on-banking\" class=\"center\"> "
+    "<p><big><center> End to End Ray Experiment UML Sequence Diagram :: </center><big>\n",
+    "<img src=\"./images/ray-fraud-detection-on-banking.png\" alt=\"ray-fraud-detection-on-banking\" class=\"center\"> "
    ]
   },
   {
