--- a/Data-Engineering/PrestoDB/readme
+++ b/Data-Engineering/PrestoDB/readme
@@ -1,6 +1,6 @@
 ## EzPresto + Notebook client connection: 
 
-![fraud-detection-on-banking](images/7601117096632023.png)
+![global-data-0](images/7601117096632023.png)
 
 # What is PrestoDB (EzPrestoDB):
 The Presto (including PrestoDB, and PrestoSQL which was re-branded to Trino) is a distributed query engine for big data using the SQL query language. Its architecture allows users to query data sources such as Hadoop, Cassandra, Kafka, AWS S3, Alluxio, MySQL, MongoDB and Teradata, and allows use of multiple data sources within a query. Presto is community-driven open-source software released under the Apache License.
@@ -8,7 +8,12 @@ The Presto (including PrestoDB, and PrestoSQL which was re-branded to Trino) is 
 # The data exists globally: 
 The total amount of data created, captured, copied, and consumed globally was 33 zettabytes in 2018-1. This grew to 64.2 zettabytes in 2020 and is projected to grow to more than 180 zettabytes by 2025-21. Post covid everything moved online to a much greater degree: school, work, and, surprisingly everything. 
 
-Although some degree of online fraud and malfunctioning, failure logs, etc. System automation, AI and MLOps etc generating data to data, People continue to spend more time alone than ever before, and that time alone more data produced. 
+Although some degree of online fraud and malfunctioning, failure logs, etc. System automation, AI and MLOps etc generating data to data, People continue to spend more time alone than ever before, and that time alone more data produced.
+
+![global-data-1](images/76011217096632023.png)
+![global-data-2](images/7601137096632023.png)
+
+source: Reference taken from @statista
 
 # According to Statista’s Global Economic data repot :: 
 The total amount of data created, captured, copied, and consumed globally is forecast to increase rapidly, reaching 64.2 zettabytes in 2020. Over the next five years up to 2025, global data creation is projected to grow to more than 180 zettabytes. In 2020, the amount of data created and replicated reached a new high. The growth was higher than previously expected caused by the increased demand due to the COVID-19 pandemic, as more people worked and learned from home and used home entertainment options more often.
