EZAF-2486: Update MNIST example (enabling proxy, auto-creation of training folder, airgap's changes)

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -12,41 +12,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c1a88c5-b825-4ddc-ac35-dfa6dfd3c067",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import uuid\n",
-    "from pathlib import Path\n",
-    "\n",
-    "######################################### Storage Parameters ##############################################\n",
-    "\n",
-    "# The path that is used inside the pods to mount training data\n",
-    "mnt_path = \"/mnt/data/\"\n",
-    "\n",
-    "# The initial training data is written to the user volume by the spark job in the Apache Parquet format.\n",
-    "initial_training_data_dir = f\"{str(Path.home())}/user/mnist-spark-data\"\n",
-    "\n",
-    "# The path is relative, final_training_data_dir should be in the same folder with the notebook\n",
-    "final_training_data_dir=\"training\"\n",
-    "\n",
-    "######################################## KFP parameters ##################################################\n",
-    "\n",
-    "# Name of the Katib experiment\n",
-    "name = f\"mnist-experiment-{uuid.uuid4().hex[:4]}\"\n",
-    "print(f\"Katib experiment name: {name}\")\n",
-    "\n",
-    "# Number of epoch to train the model\n",
-    "training_steps=\"100\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "89bb0c90-a09f-4197-b9a2-f7558efb31de",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Specify proxy value if it's should be configured on the cluster\n",
+    "%env https_proxy=http://hpeproxy.its.hpecorp.net:80\n",
+    "\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
     "import sys\n",
     "!{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.20\" kubeflow-katib==0.12.0"
@@ -55,14 +27,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36ad86e2-02cc-4669-bdd1-23eb33e84ca2",
+   "id": "0c1a88c5-b825-4ddc-ac35-dfa6dfd3c067",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import uuid\n",
     "import kfp\n",
     "import kfp.dsl as dsl\n",
     "from kfp import components\n",
-    "\n",
     "from kubeflow.katib import ApiClient\n",
     "from kubeflow.katib import V1beta1ExperimentSpec\n",
     "from kubeflow.katib import V1beta1AlgorithmSpec\n",
@@ -70,16 +42,31 @@
     "from kubeflow.katib import V1beta1ParameterSpec\n",
     "from kubeflow.katib import V1beta1FeasibleSpace\n",
     "from kubeflow.katib import V1beta1TrialTemplate\n",
-    "from kubeflow.katib import V1beta1TrialParameterSpec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da013670",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from kubeflow.katib import V1beta1TrialParameterSpec\n",
+    "from pathlib import Path\n",
+    "\n",
+    "######################################### Storage Parameters ##############################################\n",
+    "\n",
+    "# The path that is used inside the pods to mount training data\n",
+    "mnt_path = \"/mnt/data/\"\n",
+    "uuid = uuid.uuid4().hex[:4]\n",
+    "\n",
+    "# The initial training data is written to the user volume by the spark job in the Apache Parquet format.\n",
+    "initial_training_data_dir = f\"{str(Path.home())}/user/mnist-spark-data\"\n",
+    "\n",
+    "# The path is relative, final_training_data_dir should be in the same folder with the notebook\n",
+    "final_training_data_dir=f\"training-{uuid}\"\n",
+    "\n",
+    "######################################## KFP parameters ##################################################\n",
+    "\n",
+    "# Name of the Katib experiment\n",
+    "name = f\"mnist-experiment-{uuid}\"\n",
+    "print(f\"Katib experiment name: {name}\")\n",
+    "\n",
+    "# Number of epoch to train the model\n",
+    "training_steps=\"100\"\n",
+    "\n",
+    "\n",
     "kfp_client = kfp.Client()\n",
     "namespace = kfp_client.get_user_namespace()"
    ]
@@ -102,7 +89,7 @@
     "     open(final_training_data_dir + \"/t10k-images-idx3-ubyte.gz\", 'wb') as f2, \\\n",
     "     open(final_training_data_dir + \"/train-labels-idx1-ubyte.gz\", 'wb') as f3, \\\n",
     "     open(final_training_data_dir + \"/t10k-labels-idx1-ubyte.gz\", 'wb') as f4:\n",
-    "         mnist_parquet = pd.read_parquet(initial_training_data_dir)            # folder name that specified in Spark Job\n",
+    "         mnist_parquet = pd.read_parquet(initial_training_data_dir)\n",
     "         x_train, x_test, y_train, y_test = mnist_parquet[\"content\"]\n",
     "         f1.write(x_train)\n",
     "         f2.write(x_test)\n",
@@ -280,8 +267,8 @@
     "\n",
     "    # Create the KFP task for the Katib Experiment.\n",
     "    # Experiment Spec should be serialized to a valid Kubernetes object.\n",
-    "    katib_experiment_launcher_op = components.load_component_from_url(\n",
-    "        \"https://raw.githubusercontent.com/kubeflow/pipelines/master/components/kubeflow/katib-launcher/component.yaml\")\n",
+    "    katib_experiment_launcher_op = components.load_component_from_file(\"component/katib-launcher-component.yaml\")\n",
+    "\n",
     "    op = katib_experiment_launcher_op(\n",
     "        experiment_name=experiment_name,\n",
     "        experiment_namespace=experiment_namespace,\n",
@@ -418,8 +405,8 @@
     "    }\n",
     "\n",
     "    # Create the KFP task for the TFJob.\n",
-    "    tfjob_launcher_op = components.load_component_from_url(\n",
-    "        \"https://raw.githubusercontent.com/kubeflow/pipelines/master/components/kubeflow/launcher/component.yaml\")\n",
+    "    tfjob_launcher_op = components.load_component_from_file(\"component/katib-launcher-component.yaml\")\n",
+    "    \n",
     "    op = tfjob_launcher_op(\n",
     "        name=tfjob_name,\n",
     "        namespace=tfjob_namespace,\n",
@@ -438,29 +425,28 @@
    "outputs": [],
    "source": [
     "def create_serving_task(model_name, model_namespace, tfjob_op, model_volume_op):\n",
-    "\n",
     "    api_version = 'serving.kserve.io/v1beta1'\n",
-    "    serving_component_url = 'https://raw.githubusercontent.com/kubeflow/pipelines/master/components/kserve/component.yaml'\n",
+    "    serving_component_url = 'component/kserve-component.yaml'\n",
     "\n",
     "    # Uncomment the following two lines if you are using KFServing v0.6.x or v0.5.x\n",
     "    # api_version = 'serving.kubeflow.org/v1beta1'\n",
-    "    # serving_component_url = 'https://raw.githubusercontent.com/kubeflow/pipelines/master/components/kubeflow/kfserving/component.yaml'\n",
+    "    # serving_component_url = 'component/kfserving-component.yaml'\n",
     "\n",
     "    inference_service = f'''\n",
-    "apiVersion: \"{api_version}\"\n",
-    "kind: \"InferenceService\"\n",
-    "metadata:\n",
-    "  name: {model_name}\n",
-    "  namespace: {model_namespace}\n",
-    "  annotations:\n",
-    "    \"sidecar.istio.io/inject\": \"false\"\n",
-    "spec:\n",
-    "  predictor:\n",
-    "    tensorflow:\n",
-    "      storageUri: \"pvc://{str(model_volume_op.outputs[\"name\"])}/\"\n",
-    "'''\n",
+    "      apiVersion: \"{api_version}\"\n",
+    "      kind: \"InferenceService\"\n",
+    "      metadata:\n",
+    "        name: {model_name}\n",
+    "        namespace: {model_namespace}\n",
+    "        annotations:\n",
+    "          \"sidecar.istio.io/inject\": \"false\"\n",
+    "      spec:\n",
+    "        predictor:\n",
+    "          tensorflow:\n",
+    "            storageUri: \"pvc://{str(model_volume_op.outputs[\"name\"])}/\"\n",
+    "      '''\n",
     "\n",
-    "    serving_launcher_op = components.load_component_from_url(serving_component_url)\n",
+    "    serving_launcher_op = components.load_component_from_file(serving_component_url)\n",
     "    serving_launcher_op(action=\"apply\", inferenceservice_yaml=inference_service).after(tfjob_op)"
    ]
   },
@@ -480,7 +466,7 @@
     "    # Run the hyperparameter tuning with Katib.\n",
     "    katib_op = create_katib_experiment_task(name, namespace, training_steps)\n",
     "\n",
-    "    volume_str = f\"model-volume-{uuid.uuid4().hex[:4]}\"\n",
+    "    volume_str = f\"model-volume-{uuid}\"\n",
     "    \n",
     "    # Create volume to train and serve the model.\n",
     "    model_volume_op = dsl.VolumeOp(\n",
@@ -522,8 +508,7 @@
     "    print(f\"Run {run_id} has been Succeeded\\n\")\n",
     "\n",
     "    # Specify the image URL here.\n",
-    "    image_url = \"https://raw.githubusercontent.com/kubeflow/katib/master/examples/v1beta1/kubeflow-pipelines/images/9.bmp\"\n",
-    "    image = Image.open(requests.get(image_url, stream=True).raw)\n",
+    "    image = Image.open(\"image/9.bmp\")\n",
     "    data = np.array(image.convert('L').resize((28, 28))).astype(np.float64).reshape(-1, 28, 28, 1)\n",
     "    data_formatted = np.array2string(data, separator=\",\", formatter={\"float\": lambda x: \"%.1f\" % x})\n",
     "    json_request = f'{{ \"instances\" : {data_formatted} }}'\n",
