--- a/Data-Science/Kubeflow-GPU/Train_mnist_kfp_gpu.ipynb
+++ b/Data-Science/Kubeflow-GPU/Train_mnist_kfp_gpu.ipynb
@@ -123,7 +123,7 @@
     "# Clean previously saved models\n",
     "model_dir = '/mnt/user/mnist-gpu-test'\n",
     "if tf.io.gfile.exists(model_dir):\n",
-    "    tf.gfile.DeleteRecursively(model_dir)"
+    "    tf.io.gfile.rmtree(model_dir)"
    ]
   },
   {
@@ -158,7 +158,7 @@
     "model_mnist = create_model()\n",
     "# create dir for Kale\n",
     "if tf.io.gfile.exists('/marshal'):\n",
-    "    tf.gfile.MkDir('/marshal/model_mnist.tfkeras')"
+    "    tf.io.gfile.mkdir('/marshal/model_mnist.tfkeras')"
    ]
   },
   {
