--- a/Data-Science/Kubeflow-GPU/Train_mnist_kfp_gpu.ipynb
+++ b/Data-Science/Kubeflow-GPU/Train_mnist_kfp_gpu.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "TRAIN_EPOCHS = 10 # Number of epochs to train\n",
-    "OUTPUTS_MIDDLE_LAYER = 1024 # Number wof units for Dense layer"
+    "OUTPUTS_MIDDLE_LAYER = 1024 # Number of units for Dense layer"
    ]
   },
   {
