Fixing Ray's news_recommendation.ipynb example

--- a/Data-Science/Ray/news_recommendation.ipynb
+++ b/Data-Science/Ray/news_recommendation.ipynb
@@ -191,8 +191,8 @@
    "source": [
     "#ray.init(address=\"ray://kuberay-head-svc.kuberay:10001\", runtime_env={\"working_dir\": \"./\"})\n",
     "\n",
-    "# Run this line, if any of the packages are missing on workers\n",
-    "ray.init(address=\"ray://kuberay-head-svc.kuberay:10001\", runtime_env={\"working_dir\": \"./\", \"pip\": [\"ipython\",\"scikit-learn\",\"pandas==1.3.2\"]})"
+    "# Run this line, all required packages exist in Ray cluster\n",
+    "ray.init(address=\"ray://kuberay-head-svc.kuberay:10001\", runtime_env={\"working_dir\": \"./\"]})"
    ]
   },
   {
