--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -136,7 +136,7 @@
     "Dataset and explanation:\n",
     "http://archive.ics.uci.edu/ml/datasets/Bike+Sharing+Dataset\n",
     "\n",
-    "- Input file: `hour.csv` - contains bike sharing counts aggregated on hourly basis. \n",
+    "- Input file: `bike-sharing.csv` - contains bike sharing counts aggregated on hourly basis. \n",
     "- Size: 17379 hours / rows\n"
    ]
   },
@@ -487,7 +487,7 @@
    ],
    "source": [
     "# load input data into pandas dataframe\n",
-    "bike_sharing = pd.read_csv(\"hour.csv\")\n",
+    "bike_sharing = pd.read_csv(\"bike-sharing.csv\")\n",
     "bike_sharing        "
    ]
   },
