EZAF-2686: runtime_env updated

--- a/Data-Science/Ray/Anomaly-Detection-Banking/ray_acceleration_experiment_fraud_detecting_on_banking_system.ipynb
+++ b/Data-Science/Ray/Anomaly-Detection-Banking/ray_acceleration_experiment_fraud_detecting_on_banking_system.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -39,6 +40,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -74,6 +76,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -371,8 +374,7 @@
     "    start_time = time.time()\n",
     "    ray.init(address=\"ray://kuberay-head-svc.kuberay:10001\", \n",
     "             runtime_env={\n",
-    "                 \"pip\": [\"minio\",\"scikit-learn==1.2.1\", \"imblearn\", \"xgboost\"],\n",
-    "                 #\"env_vars\":{\"http_proxy\": \"http://10.78.90.46:80\", \"https_proxy\": \"http://10.78.90.46:80\"} #needed for LR1 network\n",
+    "                #\"env_vars\":{\"http_proxy\": \"http://10.78.90.46:80\", \"https_proxy\": \"http://10.78.90.46:80\"} #needed for LR1 network\n",
     "             }\n",
     "    )\n",
     "\n",
@@ -2371,6 +2373,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -2419,6 +2422,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -2621,6 +2625,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
