removed secret and use objectstore-secret

--- a/E2E-Demos/Anomaly-Detection-Banking/experiment.ipynb
+++ b/E2E-Demos/Anomaly-Detection-Banking/experiment.ipynb
@@ -916,64 +916,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "block:model_deploy",
-     "prev:knn_classifier",
-     "prev:random_forest_classifier",
-     "prev:xgboost_classifier",
-     "prev:logistic_regression_cls"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# default_model_spec = V1beta1InferenceServiceSpec(predictor=V1beta1PredictorSpec(\n",
-    "#     service_account_name=config.get('service_account_name'),\n",
-    "#     sklearn=V1beta1SKLearnSpec(\n",
-    "#         storage_uri=config.get('storage_uri'),\n",
-    "#         protocol_version=config.get('protocol_version')\n",
-    "#     )))\n",
-    "\n",
-    "# isvc = V1beta1InferenceService(\n",
-    "#     api_version=constants.KSERVE_V1BETA1,\n",
-    "#     kind=constants.KSERVE_KIND,\n",
-    "#     metadata=client.V1ObjectMeta(name=config.get('KSERVE_MODEL_NAME')),\n",
-    "#     spec=default_model_spec)\n",
-    "\n",
-    "# kserve = KServeClient()\n",
-    "# kserve.create(isvc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "manifest = \"\"\"\n",
-    "apiVersion: v1\n",
-    "kind: Secret\n",
-    "metadata:\n",
-    "  name: kserve-minio-secret\n",
-    "  annotations:\n",
-    "     serving.kserve.io/s3-endpoint: {0}\n",
-    "     serving.kserve.io/s3-usehttps: \"1\"\n",
-    "     serving.kserve.io/s3-verifyssl: \"0\"\n",
-    "     serving.kserve.io/s3-useanoncredential: \"false\"\n",
-    "     serving.kserve.io/s3-cabundle: \"\"\n",
-    "type: Opaque\n",
-    "stringData:\n",
-    "  AWS_ACCESS_KEY_ID: {1}\n",
-    "  AWS_SECRET_ACCESS_KEY: {2}\n",
-    "\n",
-    "---\n",
+    "manifest = f\"\"\"\n",
     "apiVersion: v1\n",
     "kind: ServiceAccount\n",
     "metadata:\n",
     "  name: kserve-minio-sa\n",
     "secrets:\n",
-    "- name: kserve-minio-secret\n",
+    "- name: {os.environ['USER']}-objectstore-secret\n",
     "\n",
     "---\n",
     "apiVersion: \"serving.kserve.io/v1beta1\"\n",
@@ -985,11 +938,8 @@
     "    serviceAccountName: kserve-minio-sa\n",
     "    sklearn:\n",
     "      protocolVersion: \"v2\"\n",
-    "      storageUri: \"s3://{3}/banking/pickles/logisticregression/model\"\n",
-    "\"\"\".format(os.environ[\"MLFLOW_S3_ENDPOINT_URL\"].replace(\"https://\", \"\"),\n",
-    "           os.environ[\"AWS_ACCESS_KEY_ID\"],\n",
-    "           os.environ[\"AWS_SECRET_ACCESS_KEY\"],\n",
-    "           config.get(\"BUCKET\"))\n",
+    "      storageUri: \"s3://{config['BUCKET']}/banking/pickles/logisticregression/model\"\n",
+    "\"\"\"\n",
     "\n",
     "os.makedirs(\"manifests\", exist_ok=True)\n",
     "\n",
@@ -1065,18 +1015,6 @@
    },
    "outputs": [],
    "source": [
-    "# `kserve` module is not available in the base notebook image\n",
-    "# KServe = KServeClient()\n",
-    "\n",
-    "# server_endpoint = (KServe.get(config.get('KSERVE_MODEL_NAME'), namespace=config.get('NAMESPACE'))\n",
-    "#                          .get(\"status\")\n",
-    "#                          .get(\"components\")\n",
-    "#                          .get('predictor')\n",
-    "#                          .get('url')\n",
-    "#                          .replace(\"http\", \"https\"))\n",
-    "\n",
-    "# URL = f\"{server_endpoint}/v2/models/{config.get('KSERVE_MODEL_NAME')}/infer\"\n",
-    "\n",
     "DOMAIN_NAME = \"svc.cluster.local\"  # change this to your domain for external access\n",
     "NAMESPACE = config.get(\"NAMESPACE\")\n",
     "DEPLOYMENT_NAME = config.get(\"KSERVE_MODEL_NAME\")\n",
@@ -1105,9 +1043,6 @@
     "    \"inputs\" : [{\n",
     "        \"name\" : \"fraud-detection-infer-001\",\n",
     "        \"datatype\": \"FP32\",\n",
-    "        # Batch request\n",
-    "        # \"data\": [list(item) for item in X.values],\n",
-    "        # \"shape\": [len(X.values), len(X.values[0])],\n",
     "\n",
     "        \"shape\": [1, 7],\n",
     "        # Example of non-fraudulent Transaction Dtls\n",
