--- a/Data-Science/Feast/ride-sharing-example.ipynb
+++ b/Data-Science/Feast/ride-sharing-example.ipynb
@@ -346,8 +346,9 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "from pathlib import Path\n",
     "\n",
-    "pd.read_parquet(\"/home/hpedemo-user01/user/Feast/data/driver_stats.parquet\", engine=\"pyarrow\")"
+    "pd.read_parquet(f\"{str(Path.home())}/user/Feast/data/driver_stats.parquet\", engine=\"pyarrow\")"
    ]
   },
   {
