--- a/E2E-Demos/Investment-Banking/Jupyter Notebooks/Spark-Magics.ipynb
+++ b/E2E-Demos/Investment-Banking/Jupyter Notebooks/Spark-Magics.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6df0af27e9c427c92ed64f033310d35",
+       "model_id": "9030245d9a824af39459fffd5b0b708a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,7 +50,6 @@
     }
    ],
    "source": [
-    "%reload_ext sparkmagic.magics\n",
     "%manage_spark"
    ]
   },
@@ -485,6 +484,27 @@
    "display_name": "PySpark",
    "language": "python",
    "name": "pysparkkernel"
+  },
+  "kubeflow_notebook": {
+   "autosnapshot": false,
+   "docker_image": "gcr.io/mapr-252711/kubeflow/notebooks/jupyter-data-science:ezaf-v1.7.0",
+   "experiment": {
+    "id": "",
+    "name": ""
+   },
+   "experiment_name": "",
+   "katib_run": false,
+   "pipeline_description": "",
+   "pipeline_name": "",
+   "snapshot_volumes": false,
+   "steps_defaults": [
+    "label:access-ml-pipeline:true",
+    "label:add-external-df-volume:true",
+    "label:add-ldapcert-secret:true",
+    "label:add-sssd-secret:true"
+   ],
+   "volume_access_mode": "rwm",
+   "volumes": []
   },
   "language_info": {
    "codemirror_mode": {
