Updated grafana dashboards repo

--- a/E2E-Demos/Investment-Banking/Jupyter Notebooks/Spark-Magics.ipynb
+++ b/E2E-Demos/Investment-Banking/Jupyter Notebooks/Spark-Magics.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Execute the cell below and:\n",
     "1 Select Add Endpoint\n",
-    "2 Select Basic_Access, paste your Livy endpoint and authenticate with your credentials\n",
+    "2 Select Single Sign-On\n",
     "3 Select Create Session\n",
     "4 Add relevant properties\n",
     "5 Provide a name select python and click Create Session\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f88e8bc9-32bb-4555-a767-081025fb1fee",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "MagicsControllerWidget(children=(Tab(children=(ManageSessionWidget(children=(HTML(value='<br/>'), HTML(value='…"
+       "MagicsControllerWidget(children=(Tab(children=(ManageSessionWidget(children=(HTML(value='<br/>'), HBox(childre…"
       ]
      },
      "metadata": {},
